--- a/style/style.css
+++ b/style/style.css
@@ -84,3 +84,14 @@ body {
     
 }
 
+@media screen and (max-width: 450px) {
+    .timer {
+        font-size: 4em;
+    }
+
+    .btn {
+        font-size: 2em;
+    }
+}
+
+
